grammar updates to chapter 1

--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -22,7 +22,7 @@
     \nomenclature{SDO}{Software Development Organization} to create
     a single number score which indicates the overall performance
     of the organization. The
-    score is based upon data collected for 5 key result indicators
+    score is based upon data collected for five key result indicators
     of an SDO: quality, availability,
     satisfaction, schedule, and requirements.  It is not meant
     to be comparative between organizations, but to 
@@ -402,7 +402,7 @@
     
     Another aspect of software quality is the complexity of the 
     source code.  More complex code results in more maintenance efforts and
-    more chances for problems. A couple of numerical measures for the 
+    more chances for problems. Some numerical measures for the 
     complexity of source code have been created.  The most common examples
     are McCabe \cite{McCabe1976} and Halstead \cite{Halstead1977}.
     However, the measures on source code only explain part of the 
@@ -458,7 +458,7 @@
             the rate at which software is produced? 
     \end{enumerate}
 
-    Later, Martin Shepperd in \cite{Hassan2013} identified 3 important questions that software
+    Later, Martin Shepperd in \cite{Hassan2013} identified three important questions that software
     analytics must address:
     \begin{enumerate}
         \item ``How much better is my model performing than 
@@ -467,11 +467,11 @@
         \item ``How sensitive are the results to small changes in 
             one or more of the inputs?''
     \end{enumerate}
-    These are 3 important questions that should be addressed 
+    These are three important questions that should be addressed 
     when presenting any results in software analytics.  The research
     needs to demonstrate clear advantages for practitioners.  The work
-    presented in this dissertation will address both the 3 main focus areas and
-    the 3 important questions of software analytics.
+    presented in this dissertation will address both the three main focus areas and
+    the three important questions of software analytics.
 
     Lavazza, Morasca, Taibi, and Tosi focus specifically 
     on the source code; analyzing the 
@@ -548,7 +548,7 @@
     properly implemented, an obvious next step is the
     application of gamification to software development. Gamification
     is ``the process of making activities more game-like'' \cite{Werbach2014}.
-    Some of the benefits of gamification are higher productivity, competition,
+    Some of the benefits of gamification are higher productivity, added competition,
     and greater enjoyment.  
     Prior attempts
     at gamification of software development focus only on 
@@ -563,8 +563,7 @@
     strategy. Both will require new collections of data and new reporting.
 
     Overall, there exist many attempts to 
-    evaluate portions of the a software development 
-    organization.  None of the the attempts provide
+    evaluate portions of an SDO.  None of the attempts provide
     a single number score for the entirety of the 
     organization.  Most of the techniques focus on
     specific portions of the software development 
@@ -575,7 +574,7 @@
 
 \subsection{ORGANIZATION OF THE WORK}
 
-    The remainder of this dissertation is divided into 7 chapters.  Chapter 2 provides
+    The remainder of this dissertation is divided into seven chapters.  Chapter 2 provides
     an overview of software, software development life cycles, software engineering, and software
     development organizations.  Chapter 3 introduces some existing techniques for measuring
     an SDO. Chapter 4 then provides an explanation of the Cumulative
