more grammatical fixes updates to lists in the appendix

--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -344,14 +344,14 @@
     software engineering.  The kernel is the minimal set 
     of things common to all software development
     endeavours. The three parts to the kernel are:
-    \begin{description}
-        \item[Measurement] - There must exist a means to 
-            determine the health and progress of an endeavour
-        \item[Categorization]-  The activities must progress 
-            through categories during an endeavour
-        \item[Competencies] - Specific competencies will 
+    \begin{enumerate}
+        \item \textbf{Measurement} - There must exist a means to 
+            determine the health and progress of an endeavour.
+        \item \textbf{Categorization} -  The activities must progress 
+            through categories during an endeavour.
+        \item \textbf{Competencies} - Specific competencies will 
             be required for completing activities
-    \end{description}
+    \end{enumerate}
     
     The kernel defines alphas, which are seven dimensions with
     specific states for measuring progress. 
