--- a/paper_20_sdo.tex
+++ b/paper_20_sdo.tex
@@ -148,7 +148,7 @@ This is the definition used for the remainder of this dissertation.
         the scope, size, and duration of each phase.  For example, the spiral
         model spends less time in each phase.  The agile models produce less
         documentation and focus more on the implementation phase. Here are
-        the common phases in nearly all SDLC models:
+        the five common phases in nearly all SDLC models:
         \begin{description}
             \item[1. Requirements] \hfill \\ The first phase is involved 
                 with defining what the software must do.  Each piece of 
