--- a/paper_30_measure.tex
+++ b/paper_30_measure.tex
@@ -53,12 +53,12 @@
                 It is not an acronym.} and FindBugs$^{TM}$ \cite{PMD, Findbugs}.
         \end{itemize}
         All these metrics are beneficial, but none of them tell the story of the entire
-        SDO.  Most of the metrics, as seen in the list above, for an SDO focus on 
+        SDO.  Most of the metrics for an SDO, as seen in the list above, focus on 
         the source code and development phase. 
-        Since metrics are indirect, it can be very difficult match SDO performance with
+        Since metrics are indirect, it can be very difficult to match SDO performance with
         a metric or series of metrics.  Metrics are great for tracking, but decision making
         based upon metrics alone is difficult.  That is why many of the other techniques
-        build upon metrics to provide a more complete overall picture of an SDO. Metrics are great starting point, but more is needed to properly 
+        build upon metrics to provide a more complete overall picture of an SDO. Metrics are a great starting point, but more is needed to properly 
         evaluate performance. 
 
     \subsection{INDICATORS}
@@ -111,7 +111,7 @@
         Indicators can be used in just about every organizational
         setting from businesses to non-profit organizations. They
         are not unique to SDOs, and the exact indicators to track
-        is very specific to the organization.  The indicators chosen
+        are very specific to the organization.  The indicators chosen
         by one organization might not be the same as the indicators
         chosen by another organization.  The following sections
         will explain the type of indicators in more detail and provide
@@ -235,7 +235,7 @@
             KPIs allow a team to monitor current performance and 
             quickly take action to correct future performance.
             KPIs cover a shorter time frame than KRIs.
-            KPIs consist of the following 7 characteristics \cite{parmenter2010}.
+            KPIs consist of the following seven characteristics \cite{parmenter2010}.
             \begin{enumerate}
                 \item Not financial
                 \item Measured frequently (hourly, daily, weekly)
@@ -250,7 +250,7 @@
             
             Antolic in \cite{Antolic2008} made one of the earliest attempts
             to identify and measure the KPIs for an SDO. Antolic's strategy
-            focused around 7 KPIs.
+            focused around six KPIs.
             \begin{enumerate}
                 \item Schedule adherence
                 \item Assigned content adherence
@@ -261,7 +261,7 @@
             \end{enumerate}
             However, according to the definition of KPI just presented,
             they are not really KPIs but instead KRIs.  That is because
-            none of the 7 clearly indicate the action required to 
+            none of the six clearly indicate the action required to 
             improve the measure.  Also, it is unclear if improving any of
             the measures will drastically improve performance.
             
@@ -311,9 +311,9 @@
         rapidly gained widespread adoption
         among businesses \cite{Kaplan2007}.  
         
-        In 2010, David Parmenter \cite{parmenter2010} added 2 more
+        In 2010, David Parmenter \cite{parmenter2010} added two more
         characteristics to the balanced scorecard: employee satisfaction
-        and environment/community.  This results in a total of 6 
+        and environment/community.  This results in a total of six 
         characteristics for the balanced scorecard.
         \begin{enumerate}
           \item Financial 
@@ -330,7 +330,7 @@
         an organization.  The downside is a balanced scorecard does not specify what
         exactly needs to be tracked. It can be very difficult to determine exactly
         what PIs, RIs, KRIs and/or KPIs to track in a balanced scorecard. 
-        It just specifies 6 broad categories.
+        It specifies six broad categories.
         It is also not specific to an SDO and 
         it does not produce a single number.  However, any new measurement
         technique for an organization should be compared with the balanced
@@ -346,19 +346,19 @@
         continue to progress and all obstacles are handled
         in a timely fashion.  
         According to Putnam and Myers in \cite{Putnam2013}, 
-        the 5 core measurements for managing software
+        the five core measurements for managing software
         projects are:
         
         \begin{enumerate}
-            \item \textbf{Quantity of function} usually measured in terms of size (such as source lines of code), that ultimately execute on the computer
-            \item \textbf{Productivity} as expressed in terms of the functionality produced for the time and effort expended
-            \item \textbf{Time} the duration of the project in calendar months
-            \item \textbf{Effort} the amount of work expended in person-months
-            \item \textbf{Reliability} as expressed in terms of defect rate (or its reciprocal, mean time to defect)
+            \item \textbf{Quantity of function} - usually measured in terms of size (such as source lines of code), that ultimately execute on the computer
+            \item \textbf{Productivity} - as expressed in terms of the functionality produced for the time and effort expended
+            \item \textbf{Time} - the duration of the project in calendar months
+            \item \textbf{Effort} - the amount of work expended in person-months
+            \item \textbf{Reliability} - as expressed in terms of defect rate (or its reciprocal, mean time to defect)
         \end{enumerate}
         
         A \textit{process productivity} number is calculated based entirely
-        on aspects of the SDLC and the 5 core measurements.  It is a number
+        on aspects of the SDLC and the five core measurements.  It is a number
         targeted at project teams working on the SDLC.  
        
     \subsection{A SIMPLER MEASUREMENT}
