--- a/paper_70_case-study.tex
+++ b/paper_70_case-study.tex
@@ -24,7 +24,7 @@
     all elements and all Project IDs, Application IDs, and System IDs.
     
     \subsection{QUALITY}
-        The first step to dealing with the quality data is a quick
+        The first step for dealing with the quality data is a quick
         analysis of the data.  Table \ref{tab:quality_desc} provides
         some descriptive statistics for the quality data.  Testing hours
         were not captured, but they are optional, so the analysis can 
@@ -194,7 +194,7 @@
         Figure \ref{tab:schedule_desc} displays some descriptive statistics
         for the schedule data.  Since the data is mostly dates, the 
         descriptive statistics are limited, so extra values were
-        added to the table after removing 4 outliers.  The new values
+        added to the table after removing four outliers.  The new values
         in the table are: Schedule Duration (Scheduled Finish - Scheduled Start),
         Difference (Actual Finish - Schedule Finish), and 
         $\Delta$ ($\frac{\text{Difference}}{\text{Schedule Duration}}$ ).
@@ -437,7 +437,7 @@
         for the individual element scores.  No correlation appears
         to exist between any of the elements. The missing element,
         satisfaction, is the most likely element to exhibit correlation,
-        so the 4 elements analyzed here remain independent.
+        so the four elements analyzed here remain independent.
         
         
         \begin{figure}[htb]
