--- a/paper_80_conclusion.tex
+++ b/paper_80_conclusion.tex
@@ -11,7 +11,7 @@
     handle the survey distribution and collection.  Ideally, the results would automatically be
     inserted into the appropriate database tables for CRI scoring. 
     
-    As shown in Table \ref{tab:bsc}, CRI is currently not addressing 2 
+    As shown in Table \ref{tab:bsc}, CRI is currently not addressing two 
     characteristics of the balanced scorecard.  If the SDO does not operate 
     on a fixed budget, CRI could be 
     expanded to include another element for financial data. The challenge arises when
@@ -65,8 +65,8 @@
 % new section
 \section{CONCLUSION}
 
-    There are many metrics that can be used to evaluate a Software
-    Development Organization (SDO). The entire SDO needs to be measured 
+    There are many metrics that can be used to evaluate an SDO. 
+    The entire SDO needs to be measured 
     and analyzed properly, not just the development portion. 
     Knowing which metrics to use and what they all mean can be a daunting task.  
     This dissertation identified the Cumulative Result Indicator (CRI) which is a
@@ -76,12 +76,12 @@
     
     The following have all been provided in this dissertation.
     \begin{itemize}
-        \item CRI defines what 5 elements of an SDO should be measured.
+        \item CRI defines what five elements of an SDO should be measured.
             Result indicators are included for quality, availability, satisfaction,
             schedule, and requirements. 
         \item CRI defines what data needs to be collected to create a 
-            score for the 5 elements.
-        \item CRI defines the formulas to create a score for the 5 elements.
+            score for the five elements.
+        \item CRI defines the formulas to create a score for the five elements.
         \item A process was outlined to generate the CRI score.
         \item An SDLC-AE was designed which includes a storage 
             framework for the necessary CRI data.
