--- a/appendices.tex
+++ b/appendices.tex
@@ -14,7 +14,7 @@ APPENDIX\\
 \section{DETAILED STEPS OF THE SDLC}
 \label{app:detailedSDLC}
 
-    The SDLC often contains more than the 5 basic steps of requirements, design,
+    The SDLC often contains more than the five basic steps of requirements, design,
     implementation, testing, and  deployment/maintenance.  Those are the high-level
     phases, but many steps are required to complete each phase.  The following list
     provides a more detailed list of what needs to be accomplished in the 
@@ -102,7 +102,7 @@ APPENDIX\\
         
         Some diagnostic plots for the baseline quality function
         can be seen in Figure \ref{fig:quality-diag}.  The normal probability plot,
-        a.k.a. QQ Plot, shows the errors are not exactly normally distributed, but
+        a.k.a. Q-Q Plot, shows the errors are not exactly normally distributed, but
         the baseline quality function had good predictive power as shown by the
         high $R^2$. The fitted versus
         residuals plot indicates a lack of heteroscedasticity.  
@@ -171,122 +171,119 @@ APPENDIX\\
 
 \section{ADDITIONAL SDLC DATA NEEDS}
 
+    This appendix describes some additional SDLC attributes that could be tracked to help improve
+    estimation.  The SDLC-AE could be expanded to include the following.
+
     \subsection{ESTIMATION}
     
-    \begin{itemize}
-    \item Change to Database Structure  
-    \item Modify Database Data    
-    \item Create a New Database, number of new databases  
-    \item Server Configuration Changes Required   
-    \item New Servers Required   
-    \item Number of Team Members Involved  
-    \item Number of (sub)Systems Involved  
-    \item Estimation Date
-    \item Number of Days Allowed
-    \item List of Other Attributes
-    \item Number of Screens Involved 
-    \item Actual Value (hours, days, dollars) 
-    \end{itemize}
-    
-    
-    \begin{description}
-        \item[Estimated Dev Hours] - 
-            The number of development hours estimated for a 
-            project, this is just developer hours
-        \item[Estimated Doc Hours] - 
-            The number of documentation hours estimated for a project
-        \item[Estimated Test Hours] - 
-            The number of testing hours estimated for a project
-        \item[Estimated Deployment Hours] - 
-            The number of estimated hours required to 
-            deploy the project
-    \end{description}
+        The following are additional data points that could be tracked for project estimation.
+        \begin{easylist}[itemize]
+            & Change to Database Structure  
+            & Modify Database Data    
+            & Create a New Database, number of new databases  
+            & Server Configuration Changes Required   
+            & New Servers Required   
+            & Number of People Involved  
+            & Number of (sub)Systems Involved  
+            & Estimation Date
+            & Number of Days Allowed
+            & List of Other Attributes
+            & Number of Screens Involved 
+            & Actual Values (hours, days, dollars) 
+            & Estimated Values
+            && Estimated Dev Hours: 
+                The number of development hours estimated for a 
+                project, this is just developer hours
+            && Estimated Doc Hours: 
+                The number of documentation hours estimated for a project
+            && Estimated Test Hours:
+                The number of testing hours estimated for a project
+            && Estimated Deployment Hours: 
+                The number of estimated hours required to 
+                deploy the project
+        \end{easylist}
     
     \subsection{REQUIREMENTS}
-    List of: 
-    \begin{description}
-      \item[Title] 
-      \item[Descrition]
-      \item[author]
-      \item[projectID]
-      \item[date]
-      \item[Comments] list of \\
-      \begin{description}
-        \item[date]
-        \item[comment Text]
-        \item[author]
-      \end{description}
-    \end{description}
     
-    \subsection{MAINTENANCE (DEFECTS)}
-    List of:
-    \begin{description}
-      \item[Project] 
-      \item[Release]
-      \item[description]
-      \item[date Entered]
-      \item[Date fixed]
-      \item[Comments] list of \\
-      \begin{description}
-        \item[date]
-        \item[comment Text]
-        \item[author]
-      \end{description}
-    \end{description}
-    
-    
-    
-    \subsection{TESTING}
-    
-    List of:
-    \begin{description}
-      \item[Project] 
-      \item[Release]
-      \item[title]
-      \item[description]
-      \item[author]
-      \item[Date Started]
-      \item[Date Executed]
-      \item[Status (Pending, pass, fail)]
-      \item[Comments] list of \\
-      \begin{description}
-        \item[date]
-        \item[comment Text]
-        \item[author]
-      \end{description}
-    \end{description}
+        The following are additional data points that could be tracked for the requirements phase of an
+        SDLC project.
+        \begin{easylist}[itemize]
+            & Title
+            & Description
+            & Author
+            & Project
+            & Date
+            & Comments
+            &&  Date
+            &&  Comment text
+            &&  Author
+        \end{easylist}
     
     \subsection{DEVELOPMENT}
     
-    List of Coding Tasks:
-    \begin{description}
-      \item[Project] 
-      \item[Release]
-      \item[List of Files]
-      \item[author]
-      \item[Date Started]
-      \item[Completion Date]
-      \item[Number of Unit Tests]
-      \item[Lines of Code]
-      \item[Others] See \cite{Jones2009, Jones2012, Rubin2007, Snipes2013}
-    \end{description}
+        The following are additional data points that could be tracked for the development phase of an
+        SDLC project.
+        \begin{easylist}[itemize]
+            & Project
+            & Release
+            & List of files
+            & Author
+            & Date started
+            & Completion date
+            & Number of unit tests
+            & Lines of code
+            & Percentage of automated test coverage
+            & Others
+        \end{easylist}
+    
+    
+    \subsection{TESTING}
+        The following are additional data points that could be tracked during, before, and after the
+        testing phase of an SDLC project.
+        \begin{easylist}[itemize]
+            & Project
+            & Release
+            & Title
+            & description]
+            & Author]
+            & Date started
+            & Date executed
+            & Status (pending, pass, fail)
+            & Comments 
+            && Date
+            && Comment text
+            && Author
+        \end{easylist}
     
     \subsection{IMPLEMENTATION}
     
-    List of:
-    \begin{description}
-      \item[Project] 
-      \item[Release]
-      \item[date Entered]
-      \item[Date Scheduled]
-      \item[Date Executed]
-      \item[Ordering/Prerequisites]
-      \item[Comments] list of \\
-      \begin{description}
-        \item[date]
-        \item[comment Text]
-        \item[author]
-      \end{description}
-    \end{description}
+        The following are additional data points that could be tracked for the implementation of a project.
+        \begin{easylist}[itemize]
+            & Project
+            & Release
+            & date Entered
+            & Date Scheduled
+            & Date Executed
+            & Ordering/Prerequisites
+            & Comments
+            && date
+            && Comment text
+            && Author
+        \end{easylist}
+    
+    \subsection{MAINTENANCE (DEFECTS)}
+    
+        The following are additional data points that could be tracked for maintenance of a project.
+        \begin{easylist}[itemize]
+            & Project
+            & Release
+            & Description
+            & Date Entered
+            & Date fixed
+            & Comments
+            && Date
+            && Comment text
+            && Author
+        \end{easylist}
 
 \end{document}
